# desktop-notifications-browser-extension

./: .gitignore  Makefile.am  README  autogen.sh  configure.ac
chromium-extension/: Makefile.am  background.html  background.js  content-in-page.js  content-isolated.js  crxmake.sh  desktop-notifications.json.in  manifest.json.in
npapi-plugin/src/: Makefile.am  object.c  object.h  plugin.c  plugin.h
